Se agrega el mensaje en el logo

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <section class="slide" id="home" style="display: block">
             <div class="mainlogo">  
                 <div id="cont_mainlogo">
+                    <h2>Este es un mensaje nuevo</h1>
                     <h1>Soy Xabi, desarrollador de WordPress</h1>
                     <h3>Ayudo a emprendedores a crear, mantener y mejorar   sus webs</h3>
                     <div class="buttonspace">
